--- a/pages-content/home/whatScreen/whatScreen.module.scss
+++ b/pages-content/home/whatScreen/whatScreen.module.scss
@@ -78,6 +78,7 @@
 
   .loading {
     display: none;
+    margin-top: rem(80);
     @media screen and (min-width: point(sm)) {
       display: block;
     }
